Images won't resize still but most of the rest is done

--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,10 @@
 /* CSS for "Accessibility Features: Easy Wins" HTML */
 
 :root {
-    --header-bg-color: red;
+    --header-bg-color: #B03A2E;
     --header-nav-bg-color: rosybrown;
     --header-font-color: white;
-    --header-font-family:Anton;
+    --header-font-family:Arial, Helvetica, sans-serif;
     --body-font-family: Arial, Helvetica, sans-serif;
     --body-font_colour: #333;
     --header-preferences_bg-color: lightpink;
@@ -15,90 +15,143 @@
     --header-h1-font-color: var(--header-font-color);
     --header-h1-font: var(--header-font-family);
     --header-h1-font-size: 4rem;
-    --header-h2-bg-color: var(--header-bg-color);
+    --header-h2-bg-color: var(-header-bg-color);
     --header-h2-font-color: var(--header-font-color);
     --header-h2-font: var(--header-font-family);
     --header-h2-font-size: 2.5rem;
 }
-
 /* Body and Text Styling */
 body {
     font-family: var(--body-font-family);
     font-size: 1rem;
-    line-height: 1.5;
+    line-height: 1.6;
     color:black;
-    background-color: rgb(240, 240, 240);
+    background-color: rosybrown;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+section {
+    box-sizing: content-box;
+    background-color: white;
 }
 
 header {
     background-color: var(--main-bg-color);
     font-family: var(--header-font-family);
-    margin: 0.5rem;
+    margin: 0;
+    padding: 0.5rem;
     display: flex;
-    flex-flow: column;
+    flex-flow: column wrap;
+    justify-content: flex-start;
+    width: 100%;
 }
 
+.--header-nav {
+    margin: 0px;
+    padding: 0px;
+}
 
-/* Navigation Styling */
-header nav ul {
+.--nav {
+    color: var(--header-font-color);
     display: flex;
     list-style-type: none;
     white-space: nowrap;
     justify-content: flex-start;
     flex-wrap: row wrap;
     background-color: var(--header-nav-bg-color);
-    font-size: 2rem;
+    padding:0.5rem;
+    margin:0.5rem;
+    column-gap: 1rem;
 }
 
-header nav li {
+/* Navigation Styling */
+.--nav ul {
+    display: flex;
+    list-style-type: none;
+    white-space: nowrap;
+    justify-content: flex-start;
+    flex-wrap: row wrap;
+    background-color: var(--header-nav-bg-color);
+    padding: 0;
+    margin:0;
+    column-gap: 0;
+}
+
+
+
+.--nav li {
     background-color: var(--header-bg-color);
-    margin: 0.5rem 0.5rem;
+    margin: 0.5rem 0.5rem 0.5rem 0;
     padding: 0.5rem;
 }
 
-nav a {
+.--nav a {
     text-decoration: none;
     color: var(--header-font-color);
+    display: block;
 }
+
+.--header-nav ul {
+    font-size: 2rem;
+}
+
+.--article-nav ul {
+    font-size: 1.5rem;
+}
+
 #subheader {
     display: flex;
     flex-flow: row;
+    justify-content: space-between;
+    width: 100%;
+    background-color: var(--header-bg-color);
+    box-sizing: border-box;
+    color: var(--header-font-color);
+
 }
 
+#subheader a{
+    text-decoration: none;
+    color: var(--header-font-color);
+    display: inline-block;
+}
 
 #article-title {
     display: flex;
     flex-flow: column nowrap;
-    margin: 0.5rem;
+    margin: 0;
+    padding: 0;
+    
     background-color: var(--header-h1-bg-color);
-    height: 10rem;
 }
 
 
 /* Accessibility Options Styling */
 .--header-options {
-    padding: 1.25rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
     background-color: var(--header-preferences_bg-color);
     font-family: var(--header-preferences-font);
-    
+    width: 40%;
 }
 
 .--header-options h1 {
-    margin-bottom: 0.625rem;
+    margin: 0.5rem;
 }
 
 .--header-options h2 {
-    margin-bottom: 0.625rem;
+    margin: 0.5rem;
 }
 
 .--header-options form {
-    margin-top: 1.25rem;
+    margin: 0.5px;
 }
 
 /* Article Styling */
 main {
     max-width: 100%;
-    margin: 0 auto;
+    margin: 0;
 }
 
 article {
@@ -108,70 +161,61 @@ article {
 article header {
     display: flex;
     align-items: flex-start;
-    margin-bottom: 1.25rem;
+    justify-content: space-between;
+    margin: 0;
+    
 }
 
 
 header section h1 {
     /* white-space: nowrap; */
-    place-self: start start;
+    /* place-self: start start; */
     font-family: var(--main-h1-font);
     font-size: var(--header-h1-font-size);
     color: var(--header-h1-font-color);
     background-color: var(--header-h1-bg-color);
-    margin: 0.6rem;
+    margin: 0;
 }
 
-header section h2 {
+header h2 {
     white-space: nowrap;
-    place-self: start start;
+    /* place-self: start start; */
     font-family: var(--main-h2-font);
     font-size: var(--header-h2-font-size);
     color: var(--header-h2-font-color);
     background-color: var(--header-h2-bg-color);
     flex: 1;
     font-size: 1.5rem;
-    margin: 0.25rem;
+    /* margin: 0.25rem; */
 }
 
 
 
-img {
-    max-width: 100%;
-    margin-right: 1.25rem;
+#article-image1 {
+    object-fit: contain;
+    float: right;
+    padding: 20px;
+    width: auto;
+    height: auto;
 }
 
-article #article {
+#--article-nav {
+    display: flex;
     margin-top: 1.25rem;
 }
-
-article #article ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-article #article li {
-    margin: 0.625rem 0;
-}
-
-article #article a {
-    text-decoration: none;
-    color: #333;
-}
-
-article p {
-    margin-bottom: 1.25rem;
-}
-
 /* Section Styling */
 section {
     padding: 1.25rem;
     margin-bottom: 1.25rem;
+    box-sizing: border-box;
 }
+article section { 
+    padding: 1rem;
+    margin: 1rem;
+ }
 
-section h2 {
-    margin-bottom: 0.625rem;
+article section h2 {
+    margin: 0.5rem;
 }
 
 /* Link Styling */
@@ -181,6 +225,7 @@ a {
 
 a:hover {
     text-decoration: underline;
+    animation: shake 0.25s ease;
 }
 
 button:hover {
@@ -208,6 +253,21 @@ button:hover {
     }
 };
 
-.footer-logo {
-    width: 4rem;
+.--footer-logo {
+    float: right;
+    max-width: 100%;
 }
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 50%;
+    flex: 1;
+  }
