--- a/css/index.css
+++ b/css/index.css
@@ -60,8 +60,8 @@ header {
     justify-content: flex-start;
     flex-wrap: row wrap;
     background-color: var(--header-nav-bg-color);
-    padding:0.5rem;
-    margin:0.5rem;
+    padding:0;
+    margin:0;
     column-gap: 1rem;
 }
 
@@ -108,7 +108,6 @@ header {
     background-color: var(--header-bg-color);
     box-sizing: border-box;
     color: var(--header-font-color);
-
 }
 
 #subheader a{
@@ -152,6 +151,7 @@ header {
 main {
     max-width: 100%;
     margin: 0;
+    padding:0;
 }
 
 article {
@@ -215,8 +215,8 @@ section {
     box-sizing: border-box;
 }
 article section { 
-    padding: 1rem;
-    margin: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
  }
 
 article section h2 {
